--- a/bluetoothandroid/build.gradle
+++ b/bluetoothandroid/build.gradle
@@ -31,4 +31,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.getkeepsafe.relinker:relinker:1.2.1'
+
+
+
 }
