--- a/bluetoothandroid/src/main/AndroidManifest.xml
+++ b/bluetoothandroid/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tsinova.bluetoothandroid" >
+    package="com.tsinova.bluetoothandroid"
+    android:versionCode="1"
+    android:versionName="1.0.0">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
