--- a/bluetoothandroid/build.gradle
+++ b/bluetoothandroid/build.gradle
@@ -4,8 +4,6 @@ apply plugin: 'com.novoda.bintray-release'
 android {
     compileSdkVersion 26
 
-
-
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 26
@@ -26,12 +24,14 @@ android {
     lintOptions {
         abortOnError false
     }
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -39,7 +39,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.getkeepsafe.relinker:relinker:1.2.1'
-
 }
 
 publish{
@@ -47,6 +46,12 @@ publish{
     groupId = 'com.tsinova'//jcenter上的路径
     artifactId = 'TsinovaBluetooth'//项目名称
     publishVersion = '1.0.0'//版本号
-    desc = 'A Bluetooth module to control E-Bike of Tsinova '//描述，不重要
+    desc = 'A Bluetooth module to control E-Bike of Tsinova.'//描述，不重要
     website = 'https://github.com/TsinovaTech/TsinovaBluetooth'//网站，最好有，不重要
+}
+
+tasks.withType(Javadoc) {
+    options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('encoding', 'UTF-8')
+    options.addStringOption('charSet', 'UTF-8')
 }
