--- a/bluetoothandroid/src/main/AndroidManifest.xml
+++ b/bluetoothandroid/src/main/AndroidManifest.xml
@@ -5,4 +5,10 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
+    <application>
+        <activity
+            android:name=".bluetoothview.ConnBikeActivity"
+            android:screenOrientation="portrait" />
+    </application>
 </manifest>
