--- a/bluetoothandroid/build.gradle
+++ b/bluetoothandroid/build.gradle
@@ -45,8 +45,8 @@ dependencies {
 publish {
     userOrg = 'warry19940712'//bintray.com用户名
     groupId = 'com.tsinova'//jcenter上的路径
-    artifactId = 'TsinovaBluetooth'//项目名称
-    publishVersion = '1.0.6'//版本号
+    artifactId = 'TsinovaBluetooth_Spain'//项目名称
+    publishVersion = '1.0.0'//版本号
     desc = 'A Bluetooth module to control E-Bike of Tsinova.'//描述，不重要
     website = 'https://github.com/TsinovaTech/TsinovaBluetooth'//网站，最好有，不重要
 }
