添加硬件加速

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <application>
         <activity
             android:name=".bluetoothview.ConnBikeActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:hardwareAccelerated="true"
+            />
     </application>
 </manifest>
